Add illustration of how not to use critical

--- a/source-code/OpenMP/Pi/CMakeLists.txt
+++ b/source-code/OpenMP/Pi/CMakeLists.txt
@@ -16,8 +16,11 @@ add_executable(pi_serial_c.exe
 
 add_executable(pi_critical_c.exe
     pi_critical.c)
+add_executable(pi_bad_critical_c.exe
+    pi_bad_critical.c)
 if(OpenMP_C_FOUND)
     target_link_libraries(pi_critical_c.exe PUBLIC OpenMP::OpenMP_C)
+    target_link_libraries(pi_bad_critical_c.exe PUBLIC OpenMP::OpenMP_C)
 endif()
 
 # Fortran applications
@@ -26,6 +29,9 @@ add_executable(pi_serial_f90.exe
 
 add_executable(pi_critical_f90.exe
     pi_critical.f90)
+add_executable(pi_bad_critical_f90.exe
+    pi_bad_critical.f90)
 if(OpenMP_Fortran_FOUND)
     target_link_libraries(pi_critical_f90.exe PUBLIC OpenMP::OpenMP_Fortran)
+    target_link_libraries(pi_bad_critical_f90.exe PUBLIC OpenMP::OpenMP_Fortran)
 endif()
