Add illustration of race condition

--- a/source-code/OpenMP/HelloWorld/CMakeLists.txt
+++ b/source-code/OpenMP/HelloWorld/CMakeLists.txt
@@ -13,11 +13,14 @@ find_package(OpenMP)
 # C applications
 add_executable(hello_world_serial_c.exe
     hello_world_serial.c)
+add_executable(hello_world_race_condition_c.exe
+    hello_world_race_condition.c)
 add_executable(hello_world_c.exe
     hello_world.c)
 add_executable(hello_world_ordered_c.exe
     hello_world_ordered.c)
 if(OpenMP_C_FOUND)
+    target_link_libraries(hello_world_race_condition_c.exe PUBLIC OpenMP::OpenMP_C)
     target_link_libraries(hello_world_c.exe PUBLIC OpenMP::OpenMP_C)
     target_link_libraries(hello_world_ordered_c.exe PUBLIC OpenMP::OpenMP_C)
 endif()
@@ -25,11 +28,14 @@ endif()
 # Fortran applications
 add_executable(hello_world_serial_f90.exe
     hello_world_serial.f90)
+add_executable(hello_world_race_condition_f90.exe
+    hello_world_race_condition.f90)
 add_executable(hello_world_f90.exe
     hello_world.f90)
 add_executable(hello_world_ordered_f90.exe
     hello_world_ordered.f90)
 if(OpenMP_Fortran_FOUND)
+    target_link_libraries(hello_world_race_condition_f90.exe PUBLIC OpenMP::OpenMP_Fortran)
     target_link_libraries(hello_world_f90.exe PUBLIC OpenMP::OpenMP_Fortran)
     target_link_libraries(hello_world_ordered_f90.exe PUBLIC OpenMP::OpenMP_Fortran)
 endif()
