Add Fortran implementation

--- a/source-code/serial/julia_set/CMakeLists.txt
+++ b/source-code/serial/julia_set/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 3.10)
-project(julia_set LANGUAGES CXX)
+project(julia_set LANGUAGES CXX Fortran)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(julia_set.exe julia_set.cpp)
+add_executable(julia_set_cpp.exe julia_set.cpp)
+add_executable(julia_set_f90.exe julia_set.f90)
